# murmur

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  install.sh
.github/workflows/: ci.yml  release.yml
crates/murmur-agent/: Cargo.toml
crates/murmur-agent/src/: api.rs  main.rs
crates/murmur-cli/: Cargo.toml
crates/murmur-cli/src/: main.rs
crates/murmur-core/: Cargo.toml
crates/murmur-core/src/: config.rs  error.rs  lib.rs  telemetry.rs  types.rs
crates/murmur-dns-observer/: Cargo.toml
crates/murmur-dns-observer/src/: error.rs  lib.rs  observer.rs  parser.rs  types.rs
crates/murmur-probes/: Cargo.toml
crates/murmur-probes/examples/: ping_gateway.rs  probe_detailed.rs  show_packet_loss_jitter.rs  traceroute.rs
crates/murmur-probes/src/: dns.rs  http.rs  lib.rs  ping.rs  pool.rs  probe.rs  tcp.rs  tls.rs  traceroute.rs  traceroute_raw.rs
crates/murmur-sysinfo/: Cargo.toml
crates/murmur-sysinfo/examples/: show.rs
crates/murmur-sysinfo/src/: lib.rs  network.rs  system.rs  wifi.rs
crates/murmur-wasm/: Cargo.toml
crates/murmur-wasm/src/: lib.rs
docs/decisions/: ADR-000-template.md  ADR-001-workspace-structure.md  ADR-002-error-handling.md  ADR-003-otel-metrics.md  ADR-004-dns-observation.md  ADR-005-connection-pooling.md
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
