[workspace]
resolver = "2"
members = [
    "crates/murmur-core",
    "crates/murmur-probes",
    "crates/murmur-dns-observer",
    "crates/murmur-sysinfo",
    "crates/murmur-wasm",
    "crates/murmur-agent",
    "crates/murmur-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modev2301/murmur"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# OpenTelemetry
opentelemetry = { version = "0.22", features = ["metrics"] }
opentelemetry-otlp = { version = "0.15", features = ["tonic", "metrics"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio", "metrics"] }
tonic = "0.11"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Configuration
config = "0.14"

# HTTP client
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# DNS resolution
hickory-resolver = "0.24"

# Network utilities
network-interface = "2"

# Packet capture (for DNS observation)
pcap = "2"
etherparse = "0.18"
dns-parser = "0.8"

# ICMP / raw sockets
surge-ping = "0.8"
socket2 = { version = "0.5", features = ["all"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }


# TLS
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-rustls = "0.26"
webpki-roots = "0.26"

# Internal crates
murmur-core = { path = "crates/murmur-core" }
murmur-probes = { path = "crates/murmur-probes" }
murmur-dns-observer = { path = "crates/murmur-dns-observer" }
murmur-sysinfo = { path = "crates/murmur-sysinfo" }

# System info
sysinfo = "0.32"

# HTTP server (for extension API)
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
