[package]
name = "murmur-dns-observer"
description = "Passive DNS observation for auto-discovering probe targets"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
murmur-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
pcap = { workspace = true }
etherparse = { workspace = true }
dns-parser = { workspace = true }

[lints]
workspace = true
