[package]
name = "murmur-probes"
description = "Network probe implementations for Murmur"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
murmur-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
hickory-resolver = { workspace = true }
rustls = { workspace = true }
tokio-rustls = { workspace = true }
webpki-roots = { workspace = true }
chrono = { workspace = true }
surge-ping = { workspace = true }
socket2 = { workspace = true }
serde = { workspace = true }

[lints]
workspace = true
